# reproducible_data_pipeline_practice

./: dvc.yaml  pyproject.toml
data/raw/: events.csv.dvc
notebooks/: report.py
notebooks/__marimo__/session/: report.py.json
reproducible_data_pipeline/: main.py  pyproject.toml
src/: clean.py  features.py  transform.py
