[project]
name = "reproducible-data-pipeline"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "marimo>=0.23.6",
    "matplotlib>=3.10.9",
    "numpy>=2.4.5",
    "pandas>=3.0.3",
]

[dependency-groups]
dev = [
    "dvc>=3.67.1",
    "ruff>=0.15.13",
]
